refactor: removido as classes css não mais utilizadas: logged, not-logged e admin-logged

--- a/public/admin.html
+++ b/public/admin.html
@@ -23,13 +23,13 @@
         <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <button class="logged" type="button">
+                    <button type="button">
                         <a class="nav-link" href="/admin-new-products.html"><i class="fa-solid fa-circle-plus"></i>
                             Novo Produto
                         </a>
                     </button>
                 </li>
-                <li class="nav-item dropdown logged">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         <i class="fa-solid fa-user"></i>{{ userName }}</a>
@@ -40,7 +40,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link admin-logged" href="/admin.html"><i class="fa-solid fa-gear"></i>Admin</a>
+                    <a class="nav-link" href="/admin.html"><i class="fa-solid fa-gear"></i>Admin</a>
                 </li>
             </ul>
         </div>
