--- a/public/admin-new-products.html
+++ b/public/admin-new-products.html
@@ -22,7 +22,7 @@
         </a>
         <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav">
-                <li class="nav-item dropdown logged">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         <i class="fa-solid fa-user"></i>{{ userName }}</a>
@@ -33,7 +33,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link admin-logged" href="admin.html"><i class="fa-solid fa-gear"></i>Admin</a>
+                    <a class="nav-link" href="admin.html"><i class="fa-solid fa-gear"></i>Admin</a>
                 </li>
             </ul>
         </div>
