--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav">
 
-                <li class="nav-item not-logged" ng-if="!isAuthenticated">
+                <li class="nav-item" ng-if="!isAuthenticated">
                     <a class="nav-link" href="/login.html"><i class="fa-solid fa-user"></i>Minha Conta</a>
                 </li>
-                <li class="nav-item dropdown logged" ng-if="isAuthenticated">
+                <li class="nav-item dropdown" ng-if="isAuthenticated">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false" ng-model="user">
                         <i class="fa-solid fa-user"></i>{{ userName }}
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="/cart.html"><i class="fa-solid fa-cart-shopping"></i>Carrinho</a>
                 </li>
                 <li ng-if="isAuthenticated && isAdmin" class="nav-item">
-                    <a class="nav-link admin-logged" href="/admin.html"><i class="fa-solid fa-gear"></i>Admin</a>
+                    <a class="nav-link" href="/admin.html"><i class="fa-solid fa-gear"></i>Admin</a>
                 </li>
             </ul>
         </div>
