--- a/public/purchases-made.html
+++ b/public/purchases-made.html
@@ -22,7 +22,7 @@
         </a>
         <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav">
-                <li class="nav-item dropdown logged" ng-if="isAuthenticated">
+                <li class="nav-item dropdown" ng-if="isAuthenticated">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false" ng-model="user">
                         <i class="fa-solid fa-user"></i>{{ userName }}
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="/cart.html"><i class="fa-solid fa-cart-shopping"></i>Carrinho</a>
                 </li>
                 <li ng-if="isAuthenticated && isAdmin" class="nav-item">
-                    <a class="nav-link admin-logged" href="/admin.html"><i class="fa-solid fa-gear"></i>Admin</a>
+                    <a class="nav-link" href="/admin.html"><i class="fa-solid fa-gear"></i>Admin</a>
                 </li>
             </ul>
         </div>
